$Id$

2015-05-14  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron MX100/MX200/M5x0/M600 Client SSDs:
	  MX200 *00 sizes (ticket #545)
	- Samsung based SSDs: PM851, SM841N, 850 EVO
	- Marvell based SanDisk SSDs: Extreme Pro, Ultra II (ticket #544)
	- Marvell based SanDisk SSDs: X110 mSATA, X300
	- SanDisk based SSDs: pSSD (USB), U110

2015-05-10  Christian Franke  <franke@computer.org>

	scsicmds.cpp, scsicmds.h: Remove unused functions
	scsiReceiveDiagnostic() and scsiSmartIBMOfflineTest().
	Found by cppcheck.

2015-05-05  Christian Franke  <franke@computer.org>

	ataprint.cpp: Print ACS-3 device statistics DSN flags.
	Print device statistics page numbers in hex.
	smartctl.cpp: Allow hex argument for '-l devstat,PAGE'.

2015-05-02  Christian Franke  <franke@computer.org>

	ataprint.cpp: Print Transport Type for PATA and PCIe.
	Print diagnostic values if SATA version or speed is unknown.
	smartctl.8.in, smartd.8.in: Add Volker Kuhlmann to AUTHORS section.

2015-05-01  Christian Franke  <franke@computer.org>

	ataidentify.cpp: ACS-3/4 updates.
	ataprint.cpp: Add recent ACS-3/4 minor revisions.
	Add ACS-4 log 0x0f.  Add ACS-4 device statistics values and
	vendor specific statistics page.

2015-04-28  Christian Franke  <franke@computer.org>

	os_win32/installer.nsi: Fix possible loss of user PATH environment
	variable with length greater than NSIS max string length.

2015-04-26  Christian Franke  <franke@computer.org>

	do_release: New Signing Key.
	Makefile.am: Use make variables instead of autoconf variables
	if possible.

2015-04-24  Christian Franke  <franke@computer.org>

	smartctl.8.in, smartd.8.in: Rework AUTHORS section.
	INSTALL, Makefile.am, os_win32/installer.nsi:
	Remove WARNINGS file.
	WARNINGS: Remove this file.

2015-04-23  Christian Franke  <franke@computer.org>

	configure.ac: Add '--with-systemdenvfile=auto' option as new default.
	Remove no longer needed ENABLE_CAPABILITIES conditional.